# IDS-IPS-Tool

./: .gitignore  CONTRIBUTING.md  DEMO.md  Dockerfile  LICENSE  MANIFEST.in  README.md  config.json  docker-compose.yml  ids.py  ids_ips.log.1  ids_ips.log.2  ids_ips.log.3  ids_main.py  ips.py  ips_main.py  k8s-ids-ips.yaml  netids_main.py  pyproject.toml  realtime_protect.py  requirements.txt  rules.json  setup.py  utils.py
.github/workflows/: python-package.yml  python-package2.yml
dashboard/: app.py  auto_dashboard.py  main.py  ml_analytics.py
dashboard/core/: config.py  logging.py  middleware.py  security.py
dashboard/routers/: alerts.py  auth.py  config_api.py  ml.py  stats.py  system.py
dashboard/services/: email.py  siem.py  slack.py  telegram.py
dashboard/static/: dashboard.js  style.css  themes.json
dashboard/templates/: index.html
dashboard/websocket/: live_feed.py
firewall/: __init__.py  firewall_main.py  manager.py
src/: __init__.py  alert.py  config.py  ids.py  ips.py  logger.py  main.py  netids.py  rule_engine.py
src/api/: auth.py
src/ids_ips_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/middleware/: ip_allowlist.py
tests/: test_ids.py  test_ips.py  test_netids.py
